@@ -595,6 +595,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = O n\u00E1stroj
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Rotovat vybran\u00E9 geoprvky
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = \u00DAhel rotace
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = \u00DAhel ve stupn\u00EDch po sm\u011Bru hodinov\u00FDch ru\u010Di\u010Dek.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T:\No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Nemohu ulo\u017Eit do vrstvy ur\u010Den\u00E9 pouze pro \u010Dten\u00ED
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = Nemohu ulo\u017Eit.
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = Nemohu ulo\u017Eit vrstvu.
