@@ -593,7 +593,9 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-about = Drehung um...
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Drehung um
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Drehen der ausgew\u00E4hlten Objekte.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = Drehwinkel
-org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = Der Winkel in Grad und im Uhrzeigersinn..
+org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = Der Winkel in Grad und im Uhrzeigersinn.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Daten mit "nur-lesbar" Attribut k\u00F6nnen nicht gespeichert werden
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = Konnte nicht speichern
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = Ebene konnte nicht gespeichert werden
