@@ -592,6 +592,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Elforgat\u00E1
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Kiv\u00E1lasztott elemek forgat\u00E1sa.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = Forgat\u00E1si sz\u00F6g
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = A sz\u00F6g az \u00F3ramutat\u00F3 j\u00E1r\u00E1s\u00E1val megegyez\u0151 ir\u00E1nyban.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Nem lehet menteni, a r\u00E9teg csak olvashat\u00F3
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = Nem lehet menteni.
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = A r\u00E9teget nem lehet menteni.
