@@ -643,6 +643,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About=Centro
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features=Ruota elementi
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle=Angolo
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise=Angolo in gradi in senso orario.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer=Non \u00E8 possibile salvare il livello di sola lettuta
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save=non \u00E8 stato salvato
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer=Il livello non \u00E8 stato salvato
