@@ -593,6 +593,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Rotate About
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = \u9078\u629E\u30D5\u30A3\u30FC\u30C1\u30E3\u306E\u56DE\u8EE2.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = \u56DE\u8EE2\u89D2
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = The angle in degrees clockwise.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = \u30EC\u30A4\u30E4\u306E\u8AAD\u307F\u53D6\u308A\u5C02\u7528\u30BD\u30FC\u30B9\u306B\u306F\u4FDD\u5B58\u3067\u304D\u307E\u305B\u3093
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = \u4FDD\u5B58\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F.
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = \u30EC\u30A4\u30E4\u3092\u4FDD\u5B58\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F.
