@@ -593,6 +593,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Sobre Rota\u00
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Rotaciona as fei\u00E7\u00F5es selecionadas.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = \u00C2ngulo de Rota\u00E7\u00E3o
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = O \u00E2ngulo em graus no sentido hor\u00E1rios.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Layer somente leitura n\u00E3o pode ser salvo
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = N\u00E3o pode salvar
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = N\u00E3o pode salvar o Layer\:
