@@ -592,6 +592,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = \u7E5E
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = \u8F2A\u6D41\u9078\u5B9A\u7684\u7279\u9EDE\u3002
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = \u8F49\u89D2
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = \u5EA6\u9806\u6642\u91DD\u89D2\u5EA6\u3002
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = \u4E0D\u80FD\u4FDD\u5B58\u70BA\u53EA\u8B80\u6E90\u5C64
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = \u7121\u6CD5\u4FDD\u5B58\u3002
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = \u7121\u6CD5\u5132\u5B58\u5C64\u3002
